ARROW-11427: [C++] On Windows, only use AVX512 when enabled by the OS

AVX512 may be supported by the CPU but not by the Windows kernel (which needs to save and restore 512-bit registers on context switch).

Also, add a `GetRuntimeInfo()` API and the corresponding Python function `pa.runtime_info()` to query the current SIMD level.

Closes #9398 from pitrou/ARROW-11427-win-zmm-detect

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Neal Richardson <neal.p.richardson@gmail.com>